--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="col-md-6">
-    <form #addTodoForm="ngForm">
+    <form ngForm #addTodoForm="ngForm">
       <label for="name">Name</label>
       <input ngModel type="text" id="name" minlength="4" class="form-control" placeholder="Insert name here" required #name="ngModel">
       <div
